--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,12 +28,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      - uses: actions/upload-artifact@master
+      uses: actions/upload-artifact@master
         with:
           name: webpack artifacts
           path: public/
-        os: [ubuntu-latest, windows-2016]
-        node-version: [12.x, 14.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
